// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter french level should render correctly when french level selected 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  style={
    Object {
      "display": "flex",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingHorizontal": 24,
          "paddingTop": 8,
          "zIndex": 2,
        },
      ]
    }
  >
    <View
      accessibilityLabel=""
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 12,
          "elevation": 6,
          "opacity": 1,
          "paddingBottom": 12,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 12,
          "shadowColor": "#212121",
          "shadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "shadowOpacity": 0.16,
          "shadowRadius": 8,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          fill="#212121"
          focusable={false}
          height={24}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={4280361249}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGGroup>
              <RNSVGGroup>
                <RNSVGRect
                  height="24"
                  matrix={
                    Array [
                      6.123233995736766e-17,
                      1,
                      -1,
                      6.123233995736766e-17,
                      24,
                      0,
                    ]
                  }
                  opacity={0}
                  width="24"
                  x={0}
                  y={0}
                />
                <RNSVGPath
                  d="M19 11H7.14l3.63-4.36a1 1 0 1 0-1.54-1.28l-5 6a1.19 1.19 0 0 0-.09.15c0 .05 0 .08-.07.13A1 1 0 0 0 4 12a1 1 0 0 0 .07.36c0 .05 0 .08.07.13a1.19 1.19 0 0 0 .09.15l5 6A1 1 0 0 0 10 19a1 1 0 0 0 .64-.23 1 1 0 0 0 .13-1.41L7.14 13H19a1 1 0 0 0 0-2z"
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      isRTL={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          Object {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": 0,
            "marginRight": 56,
          },
        ]
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          fill="#212121"
          focusable={false}
          height={24}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={4280361249}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGGroup>
              <RNSVGGroup>
                <RNSVGRect
                  height="24"
                  opacity={0}
                  width="24"
                  x={0}
                  y={0}
                />
                <RNSVGPath
                  d="M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"
                />
                <RNSVGPath
                  d="M12 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z"
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <Text
        isRTL={false}
        style={
          Array [
            Object {
              "color": "#212121",
              "flexShrink": 1,
              "fontFamily": "circularBold",
              "fontSize": 16,
              "lineHeight": 20,
              "marginLeft": 8,
              "marginRight": 0,
              "textAlign": "left",
            },
          ]
        }
      >
        Créer mon profil
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexBasis": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "space-between",
          "paddingBottom": 24,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "padding": 24,
        }
      }
      scrollIndicatorInsets={
        Object {
          "right": 1,
        }
      }
    >
      <View>
        <Text
          isRTL={false}
          selectable={true}
          style={
            Array [
              Object {
                "color": "#212121",
                "fontFamily": "circularBold",
                "fontSize": 25,
                "lineHeight": 32,
                "textAlign": "left",
              },
              Object {
                "marginBottom": 16,
              },
            ]
          }
        >
          Quel est ton niveau en français ?
        </Text>
        <Text
          isRTL={false}
          style={
            Array [
              Object {
                "color": "#5E5E5E",
                "fontFamily": "circularBook",
                "fontSize": 16,
                "lineHeight": 20,
                "marginBottom": 48,
                "textAlign": "left",
              },
            ]
          }
        >
          C’est pour te montrer les formations faites pour ton niveau de français.
        </Text>
        <View
          accessibilityRole="radiogroup"
        >
          <View
            accessibilityRole="radio"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#FFFFFF",
                "borderRadius": 12,
                "borderWidth": 2,
                "display": "flex",
                "elevation": 6,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginBottom": 24,
                "opacity": 1,
                "paddingBottom": 14,
                "paddingLeft": 14,
                "paddingRight": 14,
                "paddingTop": 14,
                "shadowColor": "#212121",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
                "shadowOpacity": 0.16,
                "shadowRadius": 8,
              }
            }
            testID="test-filter-french_level_a"
          >
            <View
              isRTL={false}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "space-between",
                  },
                ]
              }
            >
              <Text
                isRTL={false}
                isSelected={false}
                selectable={true}
                style={
                  Array [
                    Object {
                      "color": "#212121",
                      "flexShrink": 1,
                      "fontFamily": "circularBold",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "textAlign": "left",
                    },
                    Object {
                      "color": "#212121",
                    },
                  ]
                }
              >
                french_level_a
                <Text
                  isRTL={false}
                  isSelected={false}
                  selectable={true}
                  style={
                    Array [
                      Object {
                        "color": "#212121",
                        "flexShrink": 1,
                        "fontFamily": "circularBold",
                        "fontSize": 16,
                        "lineHeight": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#212121",
                      },
                    ]
                  }
                >
                   
                  (
                  A1/A2
                  )
                </Text>
              </Text>
              <View
                isSelected={false}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "borderColor": "#5E5E5E",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "height": 24,
                      "justifyContent": "center",
                      "width": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
          <View
            accessibilityRole="radio"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#DAE0FB",
                "borderColor": "#0421B1",
                "borderRadius": 12,
                "borderWidth": 2,
                "display": "flex",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginBottom": 24,
                "opacity": 1,
                "paddingBottom": 14,
                "paddingLeft": 14,
                "paddingRight": 14,
                "paddingTop": 14,
              }
            }
            testID="test-filter-french_level_b"
          >
            <View
              isRTL={false}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "space-between",
                  },
                ]
              }
            >
              <Text
                isRTL={false}
                isSelected={true}
                selectable={true}
                style={
                  Array [
                    Object {
                      "color": "#212121",
                      "flexShrink": 1,
                      "fontFamily": "circularBold",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "textAlign": "left",
                    },
                    Object {
                      "color": "#0421B1",
                    },
                  ]
                }
              >
                french_level_b
                <Text
                  isRTL={false}
                  isSelected={true}
                  selectable={true}
                  style={
                    Array [
                      Object {
                        "color": "#212121",
                        "flexShrink": 1,
                        "fontFamily": "circularBold",
                        "fontSize": 16,
                        "lineHeight": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#0421B1",
                      },
                    ]
                  }
                >
                   
                  (
                  B1/B2
                  )
                </Text>
              </Text>
              <View
                isSelected={true}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#0421B1",
                      "borderColor": "transparent",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "height": 24,
                      "justifyContent": "center",
                      "width": 24,
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "transform": Array [
                        Object {
                          "scale": 1,
                        },
                      ],
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight={16}
                    bbWidth={16}
                    fill="#FFFFFF"
                    focusable={false}
                    height={16}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        Object {
                          "flex": 0,
                          "height": 16,
                          "width": 16,
                        },
                      ]
                    }
                    vbHeight={24}
                    vbWidth={24}
                    width={16}
                  >
                    <RNSVGGroup
                      fill={4294967295}
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGGroup>
                        <RNSVGGroup>
                          <RNSVGRect
                            height="24"
                            opacity={0}
                            width="24"
                            x={0}
                            y={0}
                          />
                          <RNSVGPath
                            d="M9.86 18a1 1 0 0 1-.73-.32l-4.86-5.17a1 1 0 1 1 1.46-1.37l4.12 4.39 8.41-9.2a1 1 0 1 1 1.48 1.34l-9.14 10a1 1 0 0 1-.73.33z"
                          />
                        </RNSVGGroup>
                      </RNSVGGroup>
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
              </View>
            </View>
          </View>
          <View
            accessibilityRole="radio"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#FFFFFF",
                "borderRadius": 12,
                "borderWidth": 2,
                "display": "flex",
                "elevation": 6,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginBottom": 24,
                "opacity": 1,
                "paddingBottom": 14,
                "paddingLeft": 14,
                "paddingRight": 14,
                "paddingTop": 14,
                "shadowColor": "#212121",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
                "shadowOpacity": 0.16,
                "shadowRadius": 8,
              }
            }
            testID="test-filter-french_level_c"
          >
            <View
              isRTL={false}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "space-between",
                  },
                ]
              }
            >
              <Text
                isRTL={false}
                isSelected={false}
                selectable={true}
                style={
                  Array [
                    Object {
                      "color": "#212121",
                      "flexShrink": 1,
                      "fontFamily": "circularBold",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "textAlign": "left",
                    },
                    Object {
                      "color": "#212121",
                    },
                  ]
                }
              >
                french_level_c
                <Text
                  isRTL={false}
                  isSelected={false}
                  selectable={true}
                  style={
                    Array [
                      Object {
                        "color": "#212121",
                        "flexShrink": 1,
                        "fontFamily": "circularBold",
                        "fontSize": 16,
                        "lineHeight": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#212121",
                      },
                    ]
                  }
                >
                   
                  (
                  C1/C2
                  )
                </Text>
              </Text>
              <View
                isSelected={false}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "borderColor": "#5E5E5E",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "height": 24,
                      "justifyContent": "center",
                      "width": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginTop": 8,
            "paddingHorizontal": 24,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "marginHorizontal": -6,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#C6C6C6",
                "borderRadius": 12,
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "height": 4,
                "marginHorizontal": 6,
                "overflow": "hidden",
                "width": "100%",
              },
            ]
          }
        >
          <View
            collapsable={false}
            isDone={true}
            style={
              Object {
                "backgroundColor": "#0421B1",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#C6C6C6",
                "borderRadius": 12,
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "height": 4,
                "marginHorizontal": 6,
                "overflow": "hidden",
                "width": "100%",
              },
            ]
          }
        >
          <View
            collapsable={false}
            isDone={true}
            style={
              Object {
                "backgroundColor": "#0421B1",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#C6C6C6",
                "borderRadius": 12,
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "height": 4,
                "marginHorizontal": 6,
                "overflow": "hidden",
                "width": "100%",
              },
            ]
          }
        >
          <View
            collapsable={false}
            isDone={true}
            style={
              Object {
                "backgroundColor": "#0421B1",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "0%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginTop": 24,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "paddingRight": 4,
              "width": "50%",
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 12,
                "display": "flex",
                "flexDirection": "row",
                "height": 56,
                "opacity": 1,
                "paddingVertical": 18,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#212121",
                    "flexShrink": 1,
                    "fontFamily": "circularBold",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "textAlign": "left",
                  },
                  Object {
                    "color": "#0421B1",
                  },
                ]
              }
            >
              Passer l'étape
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "paddingLeft": 4,
              "width": "50%",
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#0421B1",
                "borderRadius": 12,
                "display": "flex",
                "elevation": 2,
                "flexDirection": "row",
                "height": 56,
                "justifyContent": "center",
                "opacity": 0.4,
                "shadowColor": "#212121",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
                "shadowOpacity": 0.4,
                "shadowRadius": 2,
              }
            }
            testID="test-validate-button"
          >
            <View
              collapsable={false}
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={24}
                bbWidth={24}
                fill="#FFFFFF"
                focusable={false}
                height={24}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 24,
                      "width": 24,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={24}
              >
                <RNSVGGroup
                  fill={4294967295}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                >
                  <RNSVGGroup>
                    <RNSVGGroup>
                      <RNSVGRect
                        height="24"
                        opacity={0}
                        width="24"
                        x={0}
                        y={0}
                      />
                      <RNSVGPath
                        d="M9.86 18a1 1 0 0 1-.73-.32l-4.86-5.17a1 1 0 1 1 1.46-1.37l4.12 4.39 8.41-9.2a1 1 0 1 1 1.48 1.34l-9.14 10a1 1 0 0 1-.73.33z"
                      />
                    </RNSVGGroup>
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              color="#FFFFFF"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "color": "#FFFFFF",
                    "flexShrink": 1,
                    "fontFamily": "circularBold",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "marginLeft": 8,
                    "marginRight": 0,
                    "textAlign": "left",
                  },
                ]
              }
            >
              Valider
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Filter french level should render correctly when no french level selected 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  style={
    Object {
      "display": "flex",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingHorizontal": 24,
          "paddingTop": 8,
          "zIndex": 2,
        },
      ]
    }
  >
    <View
      accessibilityLabel=""
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 12,
          "elevation": 6,
          "opacity": 1,
          "paddingBottom": 12,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 12,
          "shadowColor": "#212121",
          "shadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "shadowOpacity": 0.16,
          "shadowRadius": 8,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          fill="#212121"
          focusable={false}
          height={24}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={4280361249}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGGroup>
              <RNSVGGroup>
                <RNSVGRect
                  height="24"
                  matrix={
                    Array [
                      6.123233995736766e-17,
                      1,
                      -1,
                      6.123233995736766e-17,
                      24,
                      0,
                    ]
                  }
                  opacity={0}
                  width="24"
                  x={0}
                  y={0}
                />
                <RNSVGPath
                  d="M19 11H7.14l3.63-4.36a1 1 0 1 0-1.54-1.28l-5 6a1.19 1.19 0 0 0-.09.15c0 .05 0 .08-.07.13A1 1 0 0 0 4 12a1 1 0 0 0 .07.36c0 .05 0 .08.07.13a1.19 1.19 0 0 0 .09.15l5 6A1 1 0 0 0 10 19a1 1 0 0 0 .64-.23 1 1 0 0 0 .13-1.41L7.14 13H19a1 1 0 0 0 0-2z"
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      isRTL={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          Object {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": 0,
            "marginRight": 56,
          },
        ]
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          fill="#212121"
          focusable={false}
          height={24}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={4280361249}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGGroup>
              <RNSVGGroup>
                <RNSVGRect
                  height="24"
                  opacity={0}
                  width="24"
                  x={0}
                  y={0}
                />
                <RNSVGPath
                  d="M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"
                />
                <RNSVGPath
                  d="M12 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z"
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <Text
        isRTL={false}
        style={
          Array [
            Object {
              "color": "#212121",
              "flexShrink": 1,
              "fontFamily": "circularBold",
              "fontSize": 16,
              "lineHeight": 20,
              "marginLeft": 8,
              "marginRight": 0,
              "textAlign": "left",
            },
          ]
        }
      >
        Créer mon profil
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexBasis": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "space-between",
          "paddingBottom": 24,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "padding": 24,
        }
      }
      scrollIndicatorInsets={
        Object {
          "right": 1,
        }
      }
    >
      <View>
        <Text
          isRTL={false}
          selectable={true}
          style={
            Array [
              Object {
                "color": "#212121",
                "fontFamily": "circularBold",
                "fontSize": 25,
                "lineHeight": 32,
                "textAlign": "left",
              },
              Object {
                "marginBottom": 16,
              },
            ]
          }
        >
          Quel est ton niveau en français ?
        </Text>
        <Text
          isRTL={false}
          style={
            Array [
              Object {
                "color": "#5E5E5E",
                "fontFamily": "circularBook",
                "fontSize": 16,
                "lineHeight": 20,
                "marginBottom": 48,
                "textAlign": "left",
              },
            ]
          }
        >
          C’est pour te montrer les formations faites pour ton niveau de français.
        </Text>
        <View
          accessibilityRole="radiogroup"
        >
          <View
            accessibilityRole="radio"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#FFFFFF",
                "borderRadius": 12,
                "borderWidth": 2,
                "display": "flex",
                "elevation": 6,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginBottom": 24,
                "opacity": 1,
                "paddingBottom": 14,
                "paddingLeft": 14,
                "paddingRight": 14,
                "paddingTop": 14,
                "shadowColor": "#212121",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
                "shadowOpacity": 0.16,
                "shadowRadius": 8,
              }
            }
            testID="test-filter-french_level_a"
          >
            <View
              isRTL={false}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "space-between",
                  },
                ]
              }
            >
              <Text
                isRTL={false}
                isSelected={false}
                selectable={true}
                style={
                  Array [
                    Object {
                      "color": "#212121",
                      "flexShrink": 1,
                      "fontFamily": "circularBold",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "textAlign": "left",
                    },
                    Object {
                      "color": "#212121",
                    },
                  ]
                }
              >
                french_level_a
                <Text
                  isRTL={false}
                  isSelected={false}
                  selectable={true}
                  style={
                    Array [
                      Object {
                        "color": "#212121",
                        "flexShrink": 1,
                        "fontFamily": "circularBold",
                        "fontSize": 16,
                        "lineHeight": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#212121",
                      },
                    ]
                  }
                >
                   
                  (
                  A1/A2
                  )
                </Text>
              </Text>
              <View
                isSelected={false}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "borderColor": "#5E5E5E",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "height": 24,
                      "justifyContent": "center",
                      "width": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
          <View
            accessibilityRole="radio"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#FFFFFF",
                "borderRadius": 12,
                "borderWidth": 2,
                "display": "flex",
                "elevation": 6,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginBottom": 24,
                "opacity": 1,
                "paddingBottom": 14,
                "paddingLeft": 14,
                "paddingRight": 14,
                "paddingTop": 14,
                "shadowColor": "#212121",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
                "shadowOpacity": 0.16,
                "shadowRadius": 8,
              }
            }
            testID="test-filter-french_level_b"
          >
            <View
              isRTL={false}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "space-between",
                  },
                ]
              }
            >
              <Text
                isRTL={false}
                isSelected={false}
                selectable={true}
                style={
                  Array [
                    Object {
                      "color": "#212121",
                      "flexShrink": 1,
                      "fontFamily": "circularBold",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "textAlign": "left",
                    },
                    Object {
                      "color": "#212121",
                    },
                  ]
                }
              >
                french_level_b
                <Text
                  isRTL={false}
                  isSelected={false}
                  selectable={true}
                  style={
                    Array [
                      Object {
                        "color": "#212121",
                        "flexShrink": 1,
                        "fontFamily": "circularBold",
                        "fontSize": 16,
                        "lineHeight": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#212121",
                      },
                    ]
                  }
                >
                   
                  (
                  B1/B2
                  )
                </Text>
              </Text>
              <View
                isSelected={false}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "borderColor": "#5E5E5E",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "height": 24,
                      "justifyContent": "center",
                      "width": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
          <View
            accessibilityRole="radio"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#FFFFFF",
                "borderRadius": 12,
                "borderWidth": 2,
                "display": "flex",
                "elevation": 6,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginBottom": 24,
                "opacity": 1,
                "paddingBottom": 14,
                "paddingLeft": 14,
                "paddingRight": 14,
                "paddingTop": 14,
                "shadowColor": "#212121",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
                "shadowOpacity": 0.16,
                "shadowRadius": 8,
              }
            }
            testID="test-filter-french_level_c"
          >
            <View
              isRTL={false}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "space-between",
                  },
                ]
              }
            >
              <Text
                isRTL={false}
                isSelected={false}
                selectable={true}
                style={
                  Array [
                    Object {
                      "color": "#212121",
                      "flexShrink": 1,
                      "fontFamily": "circularBold",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "textAlign": "left",
                    },
                    Object {
                      "color": "#212121",
                    },
                  ]
                }
              >
                french_level_c
                <Text
                  isRTL={false}
                  isSelected={false}
                  selectable={true}
                  style={
                    Array [
                      Object {
                        "color": "#212121",
                        "flexShrink": 1,
                        "fontFamily": "circularBold",
                        "fontSize": 16,
                        "lineHeight": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#212121",
                      },
                    ]
                  }
                >
                   
                  (
                  C1/C2
                  )
                </Text>
              </Text>
              <View
                isSelected={false}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "borderColor": "#5E5E5E",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "height": 24,
                      "justifyContent": "center",
                      "width": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginTop": 8,
            "paddingHorizontal": 24,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "marginHorizontal": -6,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#C6C6C6",
                "borderRadius": 12,
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "height": 4,
                "marginHorizontal": 6,
                "overflow": "hidden",
                "width": "100%",
              },
            ]
          }
        >
          <View
            collapsable={false}
            isDone={true}
            style={
              Object {
                "backgroundColor": "#0421B1",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#C6C6C6",
                "borderRadius": 12,
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "height": 4,
                "marginHorizontal": 6,
                "overflow": "hidden",
                "width": "100%",
              },
            ]
          }
        >
          <View
            collapsable={false}
            isDone={true}
            style={
              Object {
                "backgroundColor": "#0421B1",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#C6C6C6",
                "borderRadius": 12,
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "height": 4,
                "marginHorizontal": 6,
                "overflow": "hidden",
                "width": "100%",
              },
            ]
          }
        >
          <View
            collapsable={false}
            isDone={true}
            style={
              Object {
                "backgroundColor": "#0421B1",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "0%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginTop": 24,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "paddingRight": 4,
              "width": "50%",
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 12,
                "display": "flex",
                "flexDirection": "row",
                "height": 56,
                "opacity": 1,
                "paddingVertical": 18,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#212121",
                    "flexShrink": 1,
                    "fontFamily": "circularBold",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "textAlign": "left",
                  },
                  Object {
                    "color": "#0421B1",
                  },
                ]
              }
            >
              Passer l'étape
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "paddingLeft": 4,
              "width": "50%",
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#0421B1",
                "borderRadius": 12,
                "display": "flex",
                "flexDirection": "row",
                "height": 56,
                "justifyContent": "center",
                "opacity": 0.4,
              }
            }
            testID="test-validate-button"
          >
            <View
              collapsable={false}
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={24}
                bbWidth={24}
                fill="#FFFFFF"
                focusable={false}
                height={24}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 24,
                      "width": 24,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={24}
              >
                <RNSVGGroup
                  fill={4294967295}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                >
                  <RNSVGGroup>
                    <RNSVGGroup>
                      <RNSVGRect
                        height="24"
                        opacity={0}
                        width="24"
                        x={0}
                        y={0}
                      />
                      <RNSVGPath
                        d="M9.86 18a1 1 0 0 1-.73-.32l-4.86-5.17a1 1 0 1 1 1.46-1.37l4.12 4.39 8.41-9.2a1 1 0 1 1 1.48 1.34l-9.14 10a1 1 0 0 1-.73.33z"
                      />
                    </RNSVGGroup>
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              color="#FFFFFF"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "color": "#FFFFFF",
                    "flexShrink": 1,
                    "fontFamily": "circularBold",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "marginLeft": 8,
                    "marginRight": 0,
                    "textAlign": "left",
                  },
                ]
              }
            >
              Valider
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Filter french level should select level when click on it 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  style={
    Object {
      "display": "flex",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingHorizontal": 24,
          "paddingTop": 8,
          "zIndex": 2,
        },
      ]
    }
  >
    <View
      accessibilityLabel=""
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 12,
          "elevation": 6,
          "opacity": 1,
          "paddingBottom": 12,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 12,
          "shadowColor": "#212121",
          "shadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "shadowOpacity": 0.16,
          "shadowRadius": 8,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          fill="#212121"
          focusable={false}
          height={24}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={4280361249}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGGroup>
              <RNSVGGroup>
                <RNSVGRect
                  height="24"
                  matrix={
                    Array [
                      6.123233995736766e-17,
                      1,
                      -1,
                      6.123233995736766e-17,
                      24,
                      0,
                    ]
                  }
                  opacity={0}
                  width="24"
                  x={0}
                  y={0}
                />
                <RNSVGPath
                  d="M19 11H7.14l3.63-4.36a1 1 0 1 0-1.54-1.28l-5 6a1.19 1.19 0 0 0-.09.15c0 .05 0 .08-.07.13A1 1 0 0 0 4 12a1 1 0 0 0 .07.36c0 .05 0 .08.07.13a1.19 1.19 0 0 0 .09.15l5 6A1 1 0 0 0 10 19a1 1 0 0 0 .64-.23 1 1 0 0 0 .13-1.41L7.14 13H19a1 1 0 0 0 0-2z"
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      isRTL={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          Object {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": 0,
            "marginRight": 56,
          },
        ]
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          fill="#212121"
          focusable={false}
          height={24}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={4280361249}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGGroup>
              <RNSVGGroup>
                <RNSVGRect
                  height="24"
                  opacity={0}
                  width="24"
                  x={0}
                  y={0}
                />
                <RNSVGPath
                  d="M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"
                />
                <RNSVGPath
                  d="M12 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z"
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <Text
        isRTL={false}
        style={
          Array [
            Object {
              "color": "#212121",
              "flexShrink": 1,
              "fontFamily": "circularBold",
              "fontSize": 16,
              "lineHeight": 20,
              "marginLeft": 8,
              "marginRight": 0,
              "textAlign": "left",
            },
          ]
        }
      >
        Créer mon profil
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexBasis": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "space-between",
          "paddingBottom": 24,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "padding": 24,
        }
      }
      scrollIndicatorInsets={
        Object {
          "right": 1,
        }
      }
    >
      <View>
        <Text
          isRTL={false}
          selectable={true}
          style={
            Array [
              Object {
                "color": "#212121",
                "fontFamily": "circularBold",
                "fontSize": 25,
                "lineHeight": 32,
                "textAlign": "left",
              },
              Object {
                "marginBottom": 16,
              },
            ]
          }
        >
          Quel est ton niveau en français ?
        </Text>
        <Text
          isRTL={false}
          style={
            Array [
              Object {
                "color": "#5E5E5E",
                "fontFamily": "circularBook",
                "fontSize": 16,
                "lineHeight": 20,
                "marginBottom": 48,
                "textAlign": "left",
              },
            ]
          }
        >
          C’est pour te montrer les formations faites pour ton niveau de français.
        </Text>
        <View
          accessibilityRole="radiogroup"
        >
          <View
            accessibilityRole="radio"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#FFFFFF",
                "borderRadius": 12,
                "borderWidth": 2,
                "display": "flex",
                "elevation": 6,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginBottom": 24,
                "opacity": 1,
                "paddingBottom": 14,
                "paddingLeft": 14,
                "paddingRight": 14,
                "paddingTop": 14,
                "shadowColor": "#212121",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
                "shadowOpacity": 0.16,
                "shadowRadius": 8,
              }
            }
            testID="test-filter-french_level_a"
          >
            <View
              isRTL={false}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "space-between",
                  },
                ]
              }
            >
              <Text
                isRTL={false}
                isSelected={false}
                selectable={true}
                style={
                  Array [
                    Object {
                      "color": "#212121",
                      "flexShrink": 1,
                      "fontFamily": "circularBold",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "textAlign": "left",
                    },
                    Object {
                      "color": "#212121",
                    },
                  ]
                }
              >
                french_level_a
                <Text
                  isRTL={false}
                  isSelected={false}
                  selectable={true}
                  style={
                    Array [
                      Object {
                        "color": "#212121",
                        "flexShrink": 1,
                        "fontFamily": "circularBold",
                        "fontSize": 16,
                        "lineHeight": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#212121",
                      },
                    ]
                  }
                >
                   
                  (
                  A1/A2
                  )
                </Text>
              </Text>
              <View
                isSelected={false}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "borderColor": "#5E5E5E",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "height": 24,
                      "justifyContent": "center",
                      "width": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
          <View
            accessibilityRole="radio"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#DAE0FB",
                "borderColor": "#0421B1",
                "borderRadius": 12,
                "borderWidth": 2,
                "display": "flex",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginBottom": 24,
                "opacity": 1,
                "paddingBottom": 14,
                "paddingLeft": 14,
                "paddingRight": 14,
                "paddingTop": 14,
              }
            }
            testID="test-filter-french_level_b"
          >
            <View
              isRTL={false}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "space-between",
                  },
                ]
              }
            >
              <Text
                isRTL={false}
                isSelected={true}
                selectable={true}
                style={
                  Array [
                    Object {
                      "color": "#212121",
                      "flexShrink": 1,
                      "fontFamily": "circularBold",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "textAlign": "left",
                    },
                    Object {
                      "color": "#0421B1",
                    },
                  ]
                }
              >
                french_level_b
                <Text
                  isRTL={false}
                  isSelected={true}
                  selectable={true}
                  style={
                    Array [
                      Object {
                        "color": "#212121",
                        "flexShrink": 1,
                        "fontFamily": "circularBold",
                        "fontSize": 16,
                        "lineHeight": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#0421B1",
                      },
                    ]
                  }
                >
                   
                  (
                  B1/B2
                  )
                </Text>
              </Text>
              <View
                isSelected={true}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#0421B1",
                      "borderColor": "transparent",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "height": 24,
                      "justifyContent": "center",
                      "width": 24,
                    },
                  ]
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "transform": Array [
                        Object {
                          "scale": 1,
                        },
                      ],
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight={16}
                    bbWidth={16}
                    fill="#FFFFFF"
                    focusable={false}
                    height={16}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        Object {
                          "flex": 0,
                          "height": 16,
                          "width": 16,
                        },
                      ]
                    }
                    vbHeight={24}
                    vbWidth={24}
                    width={16}
                  >
                    <RNSVGGroup
                      fill={4294967295}
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGGroup>
                        <RNSVGGroup>
                          <RNSVGRect
                            height="24"
                            opacity={0}
                            width="24"
                            x={0}
                            y={0}
                          />
                          <RNSVGPath
                            d="M9.86 18a1 1 0 0 1-.73-.32l-4.86-5.17a1 1 0 1 1 1.46-1.37l4.12 4.39 8.41-9.2a1 1 0 1 1 1.48 1.34l-9.14 10a1 1 0 0 1-.73.33z"
                          />
                        </RNSVGGroup>
                      </RNSVGGroup>
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
              </View>
            </View>
          </View>
          <View
            accessibilityRole="radio"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#FFFFFF",
                "borderRadius": 12,
                "borderWidth": 2,
                "display": "flex",
                "elevation": 6,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginBottom": 24,
                "opacity": 1,
                "paddingBottom": 14,
                "paddingLeft": 14,
                "paddingRight": 14,
                "paddingTop": 14,
                "shadowColor": "#212121",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
                "shadowOpacity": 0.16,
                "shadowRadius": 8,
              }
            }
            testID="test-filter-french_level_c"
          >
            <View
              isRTL={false}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "space-between",
                  },
                ]
              }
            >
              <Text
                isRTL={false}
                isSelected={false}
                selectable={true}
                style={
                  Array [
                    Object {
                      "color": "#212121",
                      "flexShrink": 1,
                      "fontFamily": "circularBold",
                      "fontSize": 16,
                      "lineHeight": 20,
                      "textAlign": "left",
                    },
                    Object {
                      "color": "#212121",
                    },
                  ]
                }
              >
                french_level_c
                <Text
                  isRTL={false}
                  isSelected={false}
                  selectable={true}
                  style={
                    Array [
                      Object {
                        "color": "#212121",
                        "flexShrink": 1,
                        "fontFamily": "circularBold",
                        "fontSize": 16,
                        "lineHeight": 20,
                        "textAlign": "left",
                      },
                      Object {
                        "color": "#212121",
                      },
                    ]
                  }
                >
                   
                  (
                  C1/C2
                  )
                </Text>
              </Text>
              <View
                isSelected={false}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "borderColor": "#5E5E5E",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "height": 24,
                      "justifyContent": "center",
                      "width": 24,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginTop": 8,
            "paddingHorizontal": 24,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "marginHorizontal": -6,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#C6C6C6",
                "borderRadius": 12,
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "height": 4,
                "marginHorizontal": 6,
                "overflow": "hidden",
                "width": "100%",
              },
            ]
          }
        >
          <View
            collapsable={false}
            isDone={true}
            style={
              Object {
                "backgroundColor": "#0421B1",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#C6C6C6",
                "borderRadius": 12,
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "height": 4,
                "marginHorizontal": 6,
                "overflow": "hidden",
                "width": "100%",
              },
            ]
          }
        >
          <View
            collapsable={false}
            isDone={true}
            style={
              Object {
                "backgroundColor": "#0421B1",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#C6C6C6",
                "borderRadius": 12,
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "height": 4,
                "marginHorizontal": 6,
                "overflow": "hidden",
                "width": "100%",
              },
            ]
          }
        >
          <View
            collapsable={false}
            isDone={true}
            style={
              Object {
                "backgroundColor": "#0421B1",
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "0%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginTop": 24,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "paddingRight": 4,
              "width": "50%",
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 12,
                "display": "flex",
                "flexDirection": "row",
                "height": 56,
                "opacity": 1,
                "paddingVertical": 18,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#212121",
                    "flexShrink": 1,
                    "fontFamily": "circularBold",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "textAlign": "left",
                  },
                  Object {
                    "color": "#0421B1",
                  },
                ]
              }
            >
              Passer l'étape
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "paddingLeft": 4,
              "width": "50%",
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#0421B1",
                "borderRadius": 12,
                "display": "flex",
                "elevation": 2,
                "flexDirection": "row",
                "height": 56,
                "justifyContent": "center",
                "opacity": 0.4,
                "shadowColor": "#212121",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 1,
                },
                "shadowOpacity": 0.4,
                "shadowRadius": 2,
              }
            }
            testID="test-validate-button"
          >
            <View
              collapsable={false}
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={24}
                bbWidth={24}
                fill="#FFFFFF"
                focusable={false}
                height={24}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": 24,
                      "width": 24,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={24}
              >
                <RNSVGGroup
                  fill={4294967295}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                >
                  <RNSVGGroup>
                    <RNSVGGroup>
                      <RNSVGRect
                        height="24"
                        opacity={0}
                        width="24"
                        x={0}
                        y={0}
                      />
                      <RNSVGPath
                        d="M9.86 18a1 1 0 0 1-.73-.32l-4.86-5.17a1 1 0 1 1 1.46-1.37l4.12 4.39 8.41-9.2a1 1 0 1 1 1.48 1.34l-9.14 10a1 1 0 0 1-.73.33z"
                      />
                    </RNSVGGroup>
                  </RNSVGGroup>
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              color="#FFFFFF"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "color": "#FFFFFF",
                    "flexShrink": 1,
                    "fontFamily": "circularBold",
                    "fontSize": 16,
                    "lineHeight": 20,
                    "marginLeft": 8,
                    "marginRight": 0,
                    "textAlign": "left",
                  },
                ]
              }
            >
              Valider
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
